add_executable(ArcTest ArcTest.cpp)
add_executable(CircleTest CircleTest.cpp)
add_executable(EllipseTest EllipseTest.cpp)
add_executable(FillEllipseTest FillEllipseTest.cpp)
add_executable(FillPieTest FillPieTest.cpp)
add_executable(FillRoundRectTest FillRoundRectTest.cpp)
add_executable(LineTest LineTest.cpp)
add_executable(NormalizeRadianTest NormalizeRadianTest.cpp)
add_executable(PieTest PieTest.cpp)
add_executable(PolygonTest PolygonTest.cpp)
add_executable(RoundRectTest RoundRectTest.cpp)
