include_directories(..)

add_executable(ArcTest ArcTest.cpp)
add_executable(CircleTest CircleTest.cpp)
add_executable(EllipseTest EllipseTest.cpp)
add_executable(FillEllipseTest FillEllipseTest.cpp)
add_executable(FillPieTest FillPieTest.cpp)
add_executable(FillRoundRectTest FillRoundRectTest.cpp)
add_executable(FloodFillTest FloodFillTest.cpp)
add_executable(LineTest LineTest.cpp)
add_executable(NormalizeRadianTest NormalizeRadianTest.cpp)
add_executable(PieTest PieTest.cpp)
add_executable(PolygonTest PolygonTest.cpp)
add_executable(RoundRectTest RoundRectTest.cpp)
add_executable(SubImageTest SubImageTest.cpp)

add_test(NAME ArcTest COMMAND ArcTest)
add_test(NAME CircleTest COMMAND CircleTest)
add_test(NAME EllipseTest COMMAND EllipseTest)
add_test(NAME FillEllipseTest COMMAND FillEllipseTest)
add_test(NAME FillPieTest COMMAND FillPieTest)
add_test(NAME FillRoundRectTest COMMAND FillRoundRectTest)
add_test(NAME FloodFillTest COMMAND FloodFillTest)
add_test(NAME LineTest COMMAND LineTest)
add_test(NAME NormalizeRadianTest COMMAND NormalizeRadianTest)
add_test(NAME PieTest COMMAND PieTest)
add_test(NAME PolygonTest COMMAND PolygonTest)
add_test(NAME RoundRectTest COMMAND RoundRectTest)
add_test(NAME SubImageTest COMMAND SubImageTest)
